Handle dependencies found multiple times in graph for same GAV